--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "autoprefixer": "^10.4.19",
+    "jwt-decode": "^4.0.0",
+    "postcss": "^8.4.39",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -27,6 +31,7 @@
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
     "@types/jasmine": "~5.1.0",
+    "daisyui": "^4.12.10",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
